[package]
name = "powerline"
version = "0.1.1"
authors = ["James Lee <jbit@jbit.net>"]
edition = "2018"
description = "Work-in-progress: Power-line communication library"
keywords = ["powerline", "plc", "homeplug"]
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/jbit/powerline"

[badges]
maintenance = { status = "experimental" }

[dependencies]
libc = "0.2.81"
log =  "0.4.15"
sha2 = { version = "0.10", default-features = false, optional = true }

[features]
default = ["sha2"]

[dev-dependencies]
clap = "2.33.3"
